--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,23 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
     <div id="root"></div>
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
