working second layout

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,14 @@
     coucou<br />
     coucou<br />
     coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
+    coucou<br />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
